--- a/index.html
+++ b/index.html
@@ -7,317 +7,16 @@
     <link rel="stylesheet" href="css/normalize.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css" >
-    <title>Booki</title>
+    <title>Ohmyfood</title>
 </head>
 <body>
-    <header class="flex flex-justify-between">
-        <picture>
-            <source media="(max-width: 768px)" srcset="images/logo/Booki@3x.png">
-            <img src="images/logo/Booki.png" alt="logo Booki" title="logo Booki">
-        </picture>
-        <nav>
-            <ul class="flex">
-                <li>
-                    <a href="#accommodations-anchor">Hébergements</a>
-                </li>
-                <li>
-                    <a href="#activities">Activités</a>
-                </li>
-            </ul>
-        </nav>
+    <header>
+        <h1>Ohmyfood</h1>
     </header>
     <main>
-        <section id="search">
-            <header>
-                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                <p>En plein centre ville ou en pleine nature</p>
-            </header>
-            <form class="flex">
-                <label class="flex flex-center" for="search_input">
-                    <i class="fa-solid fa-location-dot"></i>
-                </label>
-                <input type="search" name="search" id="search_input" placeholder="Entrer une localisation" value="Marseille, France">
-                <button type="submit" disabled>Rechercher</button>
-                <button type="submit" class="mobile" disabled><i class="fa fa-search"></i></button>
-            </form>
-            <div class="flex flex-wrap" id="search-filter">
-                <h2>Filtres</h2>
-                <ul class="flex flex-wrap">
-                    <li class="search-filter-button flex">
-                        <div class="search-filter-icon flex flex-center">
-                            <i class="fa-solid fa-money-bill-wave"></i>
-                        </div>
-                        <p>économique</p>
-                    </li>
-                    <li class="search-filter-button flex">
-                        <div class="search-filter-icon flex flex-center">
-                            <i class="fa-solid fa-child-reaching"></i>
-                        </div>
-                        <p>familial</p>
-                    </li>
-                    <li class="search-filter-button flex">
-                        <div class="search-filter-icon flex flex-center">
-                            <i class="fa-solid fa-heart"></i>
-                        </div>
-                        <p>romantique</p>
-                    </li>
-                    <li class="search-filter-button flex">
-                        <div class="search-filter-icon flex flex-center">
-                            <i class="fa-solid fa-dog"></i>
-                        </div>
-                        <p>animaux autorisés</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="flex" id="search-count">
-                <div class="flex flex-center">
-                    <i class="fa-solid fa-info"></i>
-                </div>
-                <p>Plus de 500 logements sont disponibles dans cette ville</p>
-            </div>
-        </section>
-        <section class="flex flex-gap" id="accommodations">
-            <div class="flex flex-col" id="accommodations-anchor">
-                <h1>Hébergements à Marseille</h1>
-                <div class="flex flex-wrap flex-justify-between flex-gap">
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                            <figure class="flex">
-                                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière" title="Auberge La Cannebière">
-                            </figure>
-                            <h3>Auberge La Cannebière</h3>
-                            <p>Nuit à partir de <span>25€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="false"></i>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" title="Hôtel du port">
-                            </figure>
-                            <h3>Hôtel du port</h3>
-                            <p>Nuit à partir de <span>52€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" title="Hôtel Les mouettes">
-                            </figure>
-                            <h3>Hôtel Les mouettes</h3>
-                            <p>Nuit à partir de <span>76€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="false"></i>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" title="Hôtel de la mer">
-                            </figure>
-                            <h3>Hôtel de la mer</h3>
-                            <p>Nuit à partir de <span>46€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="false"></i>
-                                <i class="fa-solid fa-star" data-rate="false"></i>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" title="Auberge Le Panier">
-                            </figure>
-                            <h3>Auberge Le Panier</h3>
-                            <p>Nuit à partir de <span>23€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="false"></i>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" title="Hôtel chez Amina">
-                            </figure>
-                            <h3>Hôtel chez Amina</h3>
-                            <p>Nuit à partir de <span>96€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                            </div>
-                        </a>
-                    </article>
-                </div>
-                <p><a href="#">Afficher plus</a></p>
-            </div>
-            <aside class="flex flex-col">
-                <h2 class="flex flex-justify-between">Les plus populaires <i class="fa-solid fa-star" data-rate="true"></i></h2>
-                <div class="flex flex-col flex-gap flex-justify-between">
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" title="Hôtel le soleil du matin">
-                            </figure>
-                            <h3>Hôtel le soleil du matin</h3>
-                            <p>Nuit à partir de <span>128€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au cœur de l'eau Chambre d'hôtes" title="Au cœur de l'eau Chambre d'hôtes">
-                            </figure>
-                            <h3>Au cœur de l'eau Chambre d'hôtes</h3>
-                            <p>Nuit à partir de <span>71€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="false"></i>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et blanc" title="Hôtel Tout bleu et blanc">
-                            </figure>
-                            <h3>Hôtel Tout bleu et blanc</h3>
-                            <p>Nuit à partir de <span>68€</span></p>
-                            <div class="card-rate">
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="true"></i>
-                                <i class="fa-solid fa-star" data-rate="false"></i>
-                            </div>
-                        </a>
-                    </article>
-                </div>
-            </aside>
-        </section>
-        <section id="activities">
-            <h1>Activités à Marseille</h1>
-            <div class="flex flex-gap">
-                <div class="column flex flex-col flex-gap">
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" title="Vieux Port">
-                            </figure>
-                            <h3>Vieux Port</h3>
-                        </a>
-                    </article>
-                </div>
-                <div class="column flex flex-col flex-gap">
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" title="Fort de Pomègues">
-                            </figure>
-                            <h3>Fort de Pomègues</h3>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" title="Îles du Frioul">
-                            </figure>
-                            <h3>Îles du Frioul</h3>
-                        </a>
-                    </article>
-                </div>
-                <div class="column flex flex-col flex-gap">
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" title="Parc National des Calanques">
-                            </figure>
-                            <h3>Parc National des Calanques</h3>
-                        </a>
-                    </article>
-                </div>
-                <div class="column flex-col flex flex-gap">
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" title="Notre-Dame-de-la-Garde">
-                            </figure>
-                            <h3>Notre-Dame-de-la-Garde</h3>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a class="flex flex-col" href="#">
-                             <figure class="flex">
-                                <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" title="Parc Longchamp">
-                            </figure>
-                            <h3>Parc Longchamp</h3>
-                        </a>
-                    </article>
-                </div>
-            </div>
-        </section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque facilisis urna a enim pellentesque mattis non et risus. Phasellus enim ligula, rhoncus eget elementum sed, sagittis nec nibh. Sed maximus nisl nibh, tristique pretium erat dapibus at. Proin sagittis ac elit quis lobortis. Proin pellentesque sodales eros sit amet rutrum. Proin non ornare quam. Sed bibendum at velit vel blandit. Curabitur laoreet fermentum felis, eget dapibus ante pellentesque at. Quisque tortor felis, molestie a rutrum at, laoreet et tellus. Curabitur erat nibh, dapibus nec laoreet ac, interdum vel purus. Phasellus ac tortor sed lectus varius fringilla nec non est. Quisque lectus tortor, hendrerit vitae volutpat sit amet, tristique et ex. Nullam eu ornare orci, vestibulum posuere nulla. Cras sit amet tortor fermentum, malesuada metus non, suscipit lectus.</p>
     </main>
-    <footer class="flex">
-        <div>
-            <h2>A propos</h2>
-            <ul>
-                <li><a href="#">Fonctionnement du site</a></li>
-                <li><a href="#">Conditions générales de vente</a></li>
-                <li><a href="#">Données et confidentialité</a></li>
-            </ul>
-        </div>
-        <div>
-            <h2>Nos Hébergements</h2>
-            <ul>
-                <li><a href="#">Charte qualité</a></li>
-                <li><a href="#">Soumettre votre hôtel</a></li>
-            </ul>
-        </div>
-        <div>
-            <h2>Assistance</h2>
-            <ul>
-                <li><a href="#">Centre d'aide</a></li>
-                <li><a href="#">Nous contacter</a></li>
-            </ul>
-        </div>
+    <footer >
     </footer>
 </body>
 </html>
